--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -387,98 +387,102 @@
                                     <h3 class="text-xl font-semibold dark:text-white">Notification Preferences</h3>
                                     <p class="text-sm font-normal text-gray-500 dark:text-gray-400">Customize how and
                                         when you receive notifications.</p>
-
-                                    <!-- Email Notifications -->
-                                    <div class="mt-6 p-4 border border-gray-200 dark:border-gray-700 rounded-lg">
-                                        <div class="flex items-center justify-between mb-2">
-                                            <div>
-                                                <h4 class="text-base font-medium text-gray-900 dark:text-white">Email
-                                                    Notifications</h4>
-                                                <p class="text-sm text-gray-500 dark:text-gray-400">Receive email
-                                                    notifications for important updates.</p>
-                                            </div>
-                                            <label class="relative inline-flex items-center cursor-pointer">
-
-
-                                                <input type="checkbox" value="" class="sr-only peer" checked>
-                                                <div
-                                                    class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-600 dark:peer-checked:bg-green-600">
+                                    <form method="post">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="notification_settings_form" value="1">
+                                        <!-- Email Notifications -->
+                                        <div class="mt-6 p-4 border border-gray-200 dark:border-gray-700 rounded-lg">
+                                            <div class="flex items-center justify-between mb-2">
+                                                <div>
+                                                    <h4 class="text-base font-medium text-gray-900 dark:text-white">
+                                                        Email Notifications</h4>
+                                                    <p class="text-sm text-gray-500 dark:text-gray-400">Receive email
+                                                        notifications for important updates.</p>
                                                 </div>
-
-                                            </label>
-                                        </div>
-
-
-                                    </div>
-                                    <div class="space-y-4 mt-4 p-2">
-                                        <div class="flex items-start">
-                                            <div class="flex items-center h-5 mt-1">
-                                                <input id="new-leads" name="new-leads" type="checkbox"
-                                                    class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-black focus:ring-black dark:focus:ring-black dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500"
-                                                    checked>
-                                            </div>
-                                            <div class="ml-3">
-                                                <label for="new-leads"
-                                                    class="text-sm font-medium text-gray-900 dark:text-white">New
-                                                    Leads</label>
-                                                <p class="text-sm text-gray-500 dark:text-gray-400">Get notified
-                                                    when new leads are generated.</p>
+                                                <label class="relative inline-flex items-center cursor-pointer">
+                                                    <input type="checkbox" name="email_notifications_enabled" {% if notification_settings_form.email_notifications_enabled.value %}
+                                                        checked {% endif %} class="sr-only peer">
+                                                    <div
+                                                        class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-600 dark:peer-checked:bg-green-600">
+                                                    </div>
+                                                </label>
                                             </div>
                                         </div>
 
-                                        <div class="flex items-start">
-                                            <div class="flex items-center h-5 mt-1">
-                                                <input id="account-updates" name="account-updates" type="checkbox"
-                                                    class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-black focus:ring-black dark:focus:ring-black dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500"
-                                                    checked>
-                                            </div>
-                                            <div class="ml-3">
-                                                <label for="account-updates"
-                                                    class="text-sm font-medium text-gray-900 dark:text-white">Account
-                                                    Updates</label>
-                                                <p class="text-sm text-gray-500 dark:text-gray-400">Get notified
-                                                    about important account changes.</p>
-                                            </div>
-                                        </div>
-
-                                        <div class="flex items-start">
-                                            <div class="flex items-center h-5 mt-1">
-                                                <input id="marketing-emails" name="marketing-emails" type="checkbox"
-                                                    class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-black focus:ring-black dark:focus:ring-black dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                                            </div>
-                                            <div class="ml-3">
-                                                <label for="marketing-emails"
-                                                    class="text-sm font-medium text-gray-900 dark:text-white">Marketing
-                                                    Emails</label>
-                                                <p class="text-sm text-gray-500 dark:text-gray-400">Receive
-                                                    promotional emails and special offers.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <!-- In-App Notifications -->
-                                    <div class="mt-6 p-4 border border-gray-200 dark:border-gray-700 rounded-lg">
-                                        <div class="flex items-center justify-between">
-                                            <div>
-                                                <h4 class="text-base font-medium text-gray-900 dark:text-white">In-App
-                                                    Notifications</h4>
-                                                <p class="text-sm text-gray-500 dark:text-gray-400">Receive
-                                                    notifications within the HabitatHunt dashboard.</p>
-                                            </div>
-                                            <label class="relative inline-flex items-center cursor-pointer">
-                                                <input type="checkbox" value="" class="sr-only peer" checked>
-                                                <div
-                                                    class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-600 dark:peer-checked:bg-green-600">
+                                        <div class="space-y-4 mt-4 p-2">
+                                            <div class="flex items-start">
+                                                <div class="flex items-center h-5 mt-1">
+                                                    <input id="new_leads_email" name="new_leads_email" type="checkbox"
+                                                        {% if notification_settings_form.new_leads_email.value %} checked{% endif %}
+                                                        class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-black focus:ring-black dark:focus:ring-black dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
                                                 </div>
-                                            </label>
-                                        </div>
-                                    </div>
+                                                <div class="ml-3">
+                                                    <label for="new_leads_email"
+                                                        class="text-sm font-medium text-gray-900 dark:text-white">New
+                                                        Leads</label>
+                                                    <p class="text-sm text-gray-500 dark:text-gray-400">Get notified
+                                                        when new leads are generated.</p>
+                                                </div>
+                                            </div>
 
-                                    <div class="mt-6">
-                                        <button
-                                            class="px-5 py-2.5 text-sm font-medium text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-gray-300 rounded-lg dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Save
-                                            Preferences</button>
-                                    </div>
+                                            <div class="flex items-start">
+                                                <div class="flex items-center h-5 mt-1">
+                                                    <input id="account_updates_email" name="account_updates_email"
+                                                        type="checkbox" {% if notification_settings_form.account_updates_email.value %}
+                                                        checked
+                                                        {% endif %}
+                                                        class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-black focus:ring-black dark:focus:ring-black dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
+                                                </div>
+                                                <div class="ml-3">
+                                                    <label for="account_updates_email"
+                                                        class="text-sm font-medium text-gray-900 dark:text-white">Account
+                                                        Updates</label>
+                                                    <p class="text-sm text-gray-500 dark:text-gray-400">Get notified
+                                                        about important account changes.</p>
+                                                </div>
+                                            </div>
+
+                                            <div class="flex items-start">
+                                                <div class="flex items-center h-5 mt-1">
+                                                    <input id="marketing_emails" name="marketing_emails" type="checkbox"
+                                                        {% if notification_settings_form.marketing_emails.value %}
+                                                        checked {% endif %}
+                                                        class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-black focus:ring-black dark:focus:ring-black dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
+                                                </div>
+                                                <div class="ml-3">
+                                                    <label for="marketing_emails"
+                                                        class="text-sm font-medium text-gray-900 dark:text-white">Marketing
+                                                        Emails</label>
+                                                    <p class="text-sm text-gray-500 dark:text-gray-400">Receive
+                                                        promotional emails and special offers.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <!-- In-App Notifications -->
+                                        <div class="mt-6 p-4 border border-gray-200 dark:border-gray-700 rounded-lg">
+                                            <div class="flex items-center justify-between">
+                                                <div>
+                                                    <h4 class="text-base font-medium text-gray-900 dark:text-white">
+                                                        In-App Notifications</h4>
+                                                    <p class="text-sm text-gray-500 dark:text-gray-400">Receive
+                                                        notifications within the HabitatHunt dashboard.</p>
+                                                </div>
+                                                <label class="relative inline-flex items-center cursor-pointer">
+                                                    <input type="checkbox" name="in_app_notifications" {% if notification_settings_form.in_app_notifications.value %} checked {% endif %} class="sr-only peer">
+                                                    <div
+                                                        class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-600 dark:peer-checked:bg-green-600">
+                                                    </div>
+                                                </label>
+                                            </div>
+                                        </div>
+
+                                        <div class="mt-6">
+                                            <button
+                                                class="px-5 py-2.5 text-sm font-medium text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-gray-300 rounded-lg dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Save
+                                                Preferences</button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
 
