--- a/templates/dashboard/components/navigation/navbar.html
+++ b/templates/dashboard/components/navigation/navbar.html
@@ -218,7 +218,7 @@
                         </div>
                         <ul class="py-1 text-gray-500 dark:text-gray-400" aria-labelledby="dropdown">
                             <li>
-                                <a href="#"
+                                <a href="{% url 'settings:settings' %}#overview"
                                     class="flex items-center py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
                                     <svg class="mr-2 w-5 h-5 text-gray-400" aria-hidden="true"
                                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
