--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -18,6 +18,7 @@
                     performance.
                 </p>
 
+                {% if total_leads > 0 %}
                 <div class="grid gap-4 grid-cols-1 lg:grid-cols-4 mt-6">
                     <!-- Total Leads Widget -->
                     <div
@@ -488,6 +489,35 @@
                     </div>
 
                 </div>
+
+                {% else %}
+                <div id="dashboard-no-leads-alert"
+                    class="p-4 mb-4 mt-4 text-green-800 border border-green-300 rounded-lg bg-green-50 dark:border-gray-600 dark:bg-gray-800"
+                    role="alert">
+                    <div class="flex items-center">
+                        <svg class="flex-shrink-0 w-4 h-4 me-2 dark:text-gray-300" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                            <path
+                                d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+                        </svg>
+                        <h3 class="text-lg font-medium text-gray-800 dark:text-gray-300">No Leads Found</h3>
+                    </div>
+                    <div class="mt-2 mb-4 text-sm text-gray-800 dark:text-gray-300">
+                        You don't have any leads yet. Click the button below to request your first lead.
+                    </div>
+                    <div class="flex">
+                        <button type="button" data-modal-target="requestLeadModal" data-modal-toggle="requestLeadModal"
+                            class="text-white bg-green-800 hover:bg-green-900 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+                            <svg class="me-2 h-3 w-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor" viewBox="0 0 20 14">
+                                <path
+                                    d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
+                            </svg>
+                            Request New Leads
+                        </button>
+                    </div>
+                </div>
+                {% endif %}
 
             </div>
         </main>
