--- a/templates/locations/partials/provinces.html
+++ b/templates/locations/partials/provinces.html
@@ -16,21 +16,16 @@
     </div>
     <div class="mt-6 p-4 mb-4 bg-white border border-gray-200 rounded-lg dark:border-gray-700 sm:p-6 dark:bg-gray-900 transition-all duration-300">
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-2">
-            <div class="flex items-center p-3 border border-gray-300 rounded-lg"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map h-4 w-4 text-muted-foreground mr-2">
+            {% for province in provinces %}
+            <div class="flex items-center p-3 border border-gray-300 rounded-lg">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map h-4 w-4 text-muted-foreground mr-2">
                     <path d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"></path>
                     <path d="M15 5.764v15"></path>
                     <path d="M9 3.236v15"></path>
-                </svg><span class="text-sm font-medium">Alberta</span></div>
-            <div class="flex items-center p-3 border border-gray-300 rounded-lg"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map h-4 w-4 text-muted-foreground mr-2">
-                    <path d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"></path>
-                    <path d="M15 5.764v15"></path>
-                    <path d="M9 3.236v15"></path>
-                </svg><span class="text-sm font-medium">Nunavut</span></div>
-            <div class="flex items-center p-3 border rounded-lg border-gray-300"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map h-4 w-4 text-muted-foreground mr-2">
-                    <path d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"></path>
-                    <path d="M15 5.764v15"></path>
-                    <path d="M9 3.236v15"></path>
-                </svg><span class="text-sm font-medium">Yukon</span></div>
+                </svg>
+                <span class="text-sm font-medium">{{ province.name }}</span>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
