--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -28,11 +28,12 @@
             event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
         });
     </script>
+
     <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.46.0/dist/apexcharts.min.js"></script>
-    
+
 </head>
 
-<body class="bg-gray-50 dark:bg-gray-800 z-0">
+<body class="bg-gray-50 dark:bg-gray-800 z-0" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
     {% block content %}
     {% endblock content %}
