--- a/templates/locations/partials/custom_location_elements.html
+++ b/templates/locations/partials/custom_location_elements.html
@@ -16,7 +16,7 @@
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
             </svg>
         </div>
-        <input type="search" id="search" class="block w-full p-2.5 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-green-500 focus:border-green-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500" placeholder="Search custom locations" required />
+        <input id="custom-location-search" name="search" value="{{ search_query }}" hx-get="{% url 'locations:search_custom_locations' %}" hx-trigger="input changed delay:100ms, search" hx-target="#custom-location-items" class="block w-full p-2.5 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-green-500 focus:border-green-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500" placeholder="Search custom locations" required />
     </div>
 </div>
 {% endif %}
